2009-06-22  Jaroslav Hajek  <highegg@gmail.com>

	* chMatrix.cc (charMatrix::charMatrix (const string_vector&)):
	Optimize w.r.t. COW of std::string.

2009-06-18  Jaroslav Hajek  <highegg@gmail.com>

	* oct-sort.cc (lookup_impl<T, Comp>): New helper inline function.
	(octave_sort<T>::lookup_merge<Comp>): New private template method.
	(octave_sort<T>::lookup<Comp>): Rewrite.
	(octave_sort<T>::lookupm<Comp>): use lookup_impl.
	(octave_sort<T>::lookupb<Comp>): use lookup_impl.
	(out_of_range_pred, out_of_range): Remove.

2009-06-18  Jaroslav Hajek  <highegg@gmail.com>

	* dMatrix.cc (xgemm): Replace resize() with uninitialized allocations
	where appropriate.
	* fMatrix.cc (xgemm): Ditto.
	* CMatrix.cc (xgemm): Ditto.
	* fCMatrix.cc (xgemm): Ditto.

2009-06-12  Jaroslav Hajek  <highegg@gmail.com>

	* oct-sort.cc (octave_sort::lookupm, octave_sort::lookupb): New
	overloaded methods.
	* oct-sort.h: Declare them.
	* Array.cc (Array<T>::lookupm, Array<T>::lookupb): New methods.
	* Array.h: Declare them.

2009-06-09  Jaroslav Hajek  <highegg@gmail.com>

	* cmd-edit.cc (command_editor::force_default_editor): New static
	method.
	* cmd-edit.h: Declare it.

2009-06-09  Jaroslav Hajek  <highegg@gmail.com>

	* lo-mappers.cc (xlog2 (const Complex&, int&), xlog2 (const
	FloatComplex&, int&)): Use more robust expression.

2009-06-07  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (Array<T>::find): Avoid allocating excessive memory. Fix
	order for backward searches.

2009-06-02  Jaroslav Hajek  <highegg@gmail.com>

	* Array-C.cc (class DiagArray2<Complex>::Proxy): Only explicitly
	instantiate DiagArray2<T>::Proxy on MSVC.
	* Array-d.cc (class DiagArray2<double>::Proxy): Ditto.
	* Array-f.cc (class DiagArray2<float>::Proxy): Ditto.
	* Array-fC.cc (class DiagArray2<FloatComplex>::Proxy): Ditto.

2009-05-26  John W. Eaton  <jwe@octave.org>

	* pathsearch.h (dir_path::path_sep_char (char),
	dir_path::static_members::path_sep_char (char)): New functions.
